force-app/main/default/objects/Skill_Language__c/Skill_Language__c.object-meta.xml
<CustomObject>
    <label>Skill Language</label>
    <nameField>
        <label>Skill Language Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Skill Language</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>