force-app/main/default/objects/Skill_Language__c/fields/Reading__c.field-meta.xml
<CustomField>
    <fullName>Reading__c</fullName>
    <label>Reading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>