force-app/main/default/objects/Skill_Language__c/fields/Speaking__c.field-meta.xml
<CustomField>
    <fullName>Speaking__c</fullName>
    <label>Speaking</label>
    <length>255</length>
    <type>Text</type>
</CustomField>