force-app/main/default/objects/Skill_Language__c/fields/Writing__c.field-meta.xml
<CustomField>
    <fullName>Writing__c</fullName>
    <label>Writing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>